# BankSystem

./: .gitignore  Bank System.sln  README.md
.github/workflows/: deploy-frontend.yml
Bank System/: Admins.txt  Bank System.vcxproj  Bank System.vcxproj.filters  Clients.txt  Employees.txt
backend/: .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
backend/core/: Admin.cpp  Admin.h  AdminManager.cpp  AdminManager.h  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  ConsoleTheme.h  DataSourceInterface.h  Employee.cpp  Employee.h  EmployeeManager.cpp  EmployeeManager.h  FileManager.cpp  FileManager.h  FilesHelper.cpp  FilesHelper.h  Parser.cpp  Parser.h  Person.cpp  Person.h  Repository.cpp  Repository.h  Screens.cpp  Screens.h  Validation.cpp  Validation.h
backend/data/: Admins.txt  Clients.txt  Employees.txt
backend/services/: BankService.cpp  BankService.h
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: ActionModal.jsx  DataTable.jsx  FormField.jsx  GlassCard.jsx  Loader.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/context/: AuthContext.jsx  NotificationContext.jsx  ToastContext.jsx
frontend/src/hooks/: useDashboardData.js
frontend/src/layouts/: AppShell.jsx
frontend/src/pages/: AdminDashboardPage.jsx  AdminPeoplePage.jsx  AdminSecurityPage.jsx  ClientDashboardPage.jsx  ClientTransactionsPage.jsx  EmployeeClientsPage.jsx  EmployeeDashboardPage.jsx  LandingPage.jsx  LoginPage.jsx  ManagerDashboardPage.jsx  ManagerExecutiveToolsPage.jsx  ManagerPeopleControlPage.jsx  SignupPage.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
